Fixing titles of posts too long

--- a/css/_components/article.scss
+++ b/css/_components/article.scss
@@ -1,5 +1,5 @@
 h1.page-title {
-	font-size: 3em;
+	font-size: 2.5em;
 	line-height: 1.25;
 	@media screen and (min-width:50em) {
 		font-size: 4.5em;
