--- a/css/main.css
+++ b/css/main.css
@@ -569,7 +569,7 @@ header.home {
       border-left: 6px solid #4a90e2; }
 
 h1.page-title {
-  font-size: 3em;
+  font-size: 2.5em;
   line-height: 1.25; }
   @media screen and (min-width: 50em) {
     h1.page-title {
